force-app/main/default/objects/Progress_Report__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Progress Reports</relationshipLabel>
    <relationshipName>Progress_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>