force-app/main/default/objects/Progress_Report__c/fields/From_period__c.field-meta.xml
<CustomField>
    <fullName>From_period__c</fullName>
    <label>From period:</label>
    <type>Date</type>
</CustomField>