force-app/main/default/objects/Progress_Report__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Progress Reports</relationshipLabel>
    <relationshipName>Progress_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>