force-app/main/default/objects/Progress_Report__c/fields/Number_of_people_trained__c.field-meta.xml
<CustomField>
    <fullName>Number_of_people_trained__c</fullName>
    <label>Number of people trained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>