force-app/main/default/objects/Progress_Report__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Progress Reports</relationshipLabel>
    <relationshipName>Progress_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>