force-app/main/default/objects/Progress_Report__c/fields/Progress_description__c.field-meta.xml
<CustomField>
    <fullName>Progress_description__c</fullName>
    <inlineHelpText>Describe the activities and progress made in this reporting period</inlineHelpText>
    <label>Progress description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>