force-app/main/default/objects/Progress_Report__c/fields/Report_Template__c.field-meta.xml
<CustomField>
    <fullName>Report_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Report Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Report_Template__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Report_Template__c</referenceTo>
    <relationshipLabel>Progress Reports</relationshipLabel>
    <relationshipName>Progress_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>