force-app/main/default/objects/Progress_Report__c/fields/To_Period__c.field-meta.xml
<CustomField>
    <fullName>To_Period__c</fullName>
    <label>To Period:</label>
    <type>Date</type>
</CustomField>