force-app/main/default/objects/Progress_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Report_Due_Date__c</columns>
    <columns>Investment__c</columns>
    <columns>From_period__c</columns>
    <columns>To_Period__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>