force-app/main/default/objects/Progress_Report__c/listViews/All_reports_Due.listView-meta.xml
<ListView>
    <fullName>All_reports_Due</fullName>
    <columns>NAME</columns>
    <columns>Report_Due_Date__c</columns>
    <columns>Investment__c</columns>
    <columns>From_period__c</columns>
    <columns>To_Period__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Due</value>
    </filters>
    <label>All reports Due</label>
</ListView>